# ladybug-tools-mcp

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.agents/plugins/: marketplace.json
.agents/skills/ladybug-tools-mcp-use/: SKILL.md
plugins/ladybug-tools-mcp/: .mcp.json
plugins/ladybug-tools-mcp/.codex-plugin/: plugin.json
src/flowerpot/: __init__.py  active_context.py  component_state.py  input_guard.py  properties_input.py  registry.py  runtime.py  worker.py  worker_cli.py
src/garden/: __init__.py  git_policy.py  ladybug_tools_config.py  manifest.py  paths.py  store.py  versions.py
src/garden/analysis_period/: __init__.py  parsing.py  summary.py
src/garden/data_collection/: __init__.py  store.py  summary.py
src/garden/dragonfly_core/: __init__.py  conversion.py  creation.py  display.py  editing.py  envelope_parameters.py  geometry.py  model_io.py  properties.py  search.py  summary.py  targets.py  uwg_properties.py  validation.py
src/garden/energy/: __init__.py  constructionsets.py  daylighting.py  hvac.py  (+4 more)
src/grasshopper_components/: FP Create Garden.py  FP Energy Properties Input.py  FP Garden List.py  FP Honeybee Link.py  FP Radiance Properties Input.py  README.md  __init__.py
src/ironbug/: __init__.py  ibjson.py  plant_application_guide.py  plant_archetypes.py
src/ladybug_tools_mcp/: __init__.py  errors.py  registry.py  server.py  tool_namespaces.py
src/web_view/: README.md  __init__.py  app.py  auto_preview.py  local_viewer.py  package-lock.json  package.json  runtime.py  session.py  url_fallback.py
(+1133 files in other folders)
